2007-12-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-inhibit.[ch]:
	* src/Makefile.am:
	Add sj-inhibit, to (un)inhibit automatic suspension by
	gnome-power-manager.

	* src/sj-extracting.c:
	Call sj-inhibit when extracting.

	Closes #344947, thanks Carl-Anton Ingmarsson and GHOP.

2007-12-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	When finished, unset the current iterator.  This should fix the
	crasher! (#498500).

2007-12-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Add "open folder when finished" schema.

	* data/sound-juicer.glade:
	Add "open folder when finished" check box.

	* src/sj-prefs.c:
	Hook up GConf option to the check box.
	
	* src/sj-main.c:
	* src/sound-juicer.h:
	Add global boolean open_finished, and hook it up to GConf.

	* src/sj-extracting.c:
	Don't show a dialog when the rip is finished, instead just eject
	or open the target folder.

	Closes #504639.  Merry Christmas Luis. :)

2007-12-22  Ross Burton  <ross@burtonini.com>

	* src/sj-main.[ch]:
	* src/sj-prefs.c:
	Make the gconf callbacks static, and fix some cast/type-punned warnings.

2007-12-21  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Set the pipeline state to NULL before disposing (#495410).

2007-12-21  Luca Cavalli  <lcavalli@svn.gnome.org>

	* src/sj-main.c: (set_message_area_text_and_icon):
	Escape album title and artist in message area (#504862).

2007-12-20  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.21.0.

2007-12-20  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/sj-message-area.[ch]:
	* src/gedit-message-area.[ch]:
	* src/sj-main.c:
	Use pristine message area widget from gedit instead of renaming.

2007-12-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Actually make pressing Submit do something useful.

2007-12-19  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-structures.h:
	* libjuicer/sj-metadata-musicbrainz.c: